Commit from Bungeni: Pootle Localisation Portal by user ashok.: 1050 of 1051 messages translated (1 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni/fr/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/fr/LC_MESSAGES/bungeni.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Wed Jul 13 12:37:52 2011\n"
-"PO-Revision-Date: 2011-07-20 18:52+0300\n"
+"PO-Revision-Date: 2011-07-20 21:00+0300\n"
 "Last-Translator: Amin <amin@assemblenationale.cm>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: fr\n"
@@ -4361,7 +4361,6 @@ msgid "akoma ntoso"
 msgstr "akoma ntoso"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:196
-#, fuzzy
 msgid "Add Political Group Address..."
 msgstr "ajouter un groupe politique ..."
 
@@ -4523,31 +4522,28 @@ msgid "Edit"
 msgstr "modifier"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:557
-#, fuzzy
 msgid "Add Title Type..."
-msgstr "ajouter un fichier ..."
+msgstr "ajouter un type de fichier ..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:565
 msgid "The 'Add...' menu - for question"
-msgstr "le menu 'ajouter ...' - pour une question"
+msgstr "le 'ajouter menu ...' - pour une question"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:57
-#, fuzzy
 msgid "Discussions in scheduling"
-msgstr "discussions"
+msgstr "discussions en cour"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:593
-#, fuzzy
 msgid "Assign question to a group..."
-msgstr "assigner le projet de loi à un groupe ..."
+msgstr "attribue une question à une groupe ..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:60
 msgid "Actions for Calendar Schedulings"
-msgstr "actions pour les créneaux horaires du calendrier "
+msgstr "actions pour les horaires du calendrier "
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:622
 msgid "The 'Add...' menu - for tabled document"
-msgstr "le menu 'ajouter ...' - pour un document déposé"
+msgstr "le 'ajoute rmenu ...' - pour un document déposé"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:63
 msgid "The 'workflow' menu - allows user to execute workflow transitions"
@@ -4556,36 +4552,32 @@ msgstr ""
 "transitions du flux de travail"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:650
-#, fuzzy
 msgid "Assign this document to a group..."
-msgstr "assigner le projet de loi à un groupe ..."
+msgstr "attribue un document à une groupe ..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:667
 msgid "The 'Add...' menu - for agenda item"
-msgstr "le menu 'ajouter ...' - pour un point de l'ordre du jour"
+msgstr "le 'ajouter menu ...' - pour un point de l'ordre du jour"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:688
-#, fuzzy
 msgid "Assign agenda item to a group..."
-msgstr "assigner le projet de loi à un groupe ..."
+msgstr "attribue un point de l’ordre du du jour a une groupe..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:697
 msgid "The 'Add...' menu - for offices"
-msgstr "le menu 'ajouter ...' - pour les départements"
+msgstr "le 'ajouter menu ...' - pour des bureaux"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:70
 msgid "The 'Calendar' menu - allows user to select a scheduling context"
 msgstr ""
-"le menu 'calendrier' - permet à l'utilisateur de sélectionner un contexte de "
+"le 'calendrier'menu - permet à l'utilisateur de sélectionner un contexte de "
 "planification horaire"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:718
-#, fuzzy
 msgid "Add Office Address..."
-msgstr "ajouter une adresse ..."
+msgstr "ajouter une adresse du bureau ..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:726
-#, fuzzy
 msgid "Add Title..."
 msgstr "ajoutez un titre..."
 
@@ -4595,7 +4587,7 @@ msgstr "contenu"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:74
 msgid "The 'Add' menu - allows user to add content"
-msgstr "le menu 'ajouter' - permet à l'utilisateur d'ajouter du contenu"
+msgstr "le 'ajouter'menu - permet à l'utilisateur d'ajouter du contenu"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:759
 msgid "Add ..."
@@ -4603,16 +4595,15 @@ msgstr "ajouter ..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:768
 msgid "The 'Add..' menu - for calendar"
-msgstr "le menu 'ajouter ...' - pour le calendrier"
+msgstr "le 'ajouter menu ...' - pour le calendrier"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:774
-#, fuzzy
 msgid "edit attendance"
-msgstr "présence lors de la séance "
+msgstr " modifier la présence "
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:78
 msgid "The 'Translate' menu - allows user to translate content"
-msgstr "le menu 'traduire' - permet à l'utilisateur d'ajouter des traductions"
+msgstr "le 'traduire' menu - permet à l'utilisateur d'ajouter des contenu"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:782
 msgid "Delete Sitting"
@@ -4624,7 +4615,7 @@ msgstr "ajouter un parlement ..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:798
 msgid "Add Committee..."
-msgstr "ajouter un comité ..."
+msgstr "ajouter une commission ..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:805
 #: src/bungeni.main/bungeni/ui/menu.zcml:1004
@@ -4640,13 +4631,14 @@ msgid "Add MP..."
 msgstr "ajouter un mp ..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:82
-#, fuzzy
 msgid "The 'Add' menu - allows user to add content while in workspace"
-msgstr "le menu 'ajouter' - permet à l'utilisateur d'ajouter du contenu"
+msgstr ""
+"le 'ajouter' menu - permettre à l'utilisateur d'ajouter de contenu dans "
+"espace du travail"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:843
 msgid "Add Office..."
-msgstr "ajouter un département ..."
+msgstr "ajouter un bureau..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:850
 msgid "Add Political Party..."
@@ -4654,7 +4646,7 @@ msgstr "ajouter un parti politique ..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:857
 msgid "Add Political Group..."
-msgstr "ajouter un groupe politique ..."
+msgstr "ajouter une groupe politique ..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:871
 msgid "Add User..."
@@ -4674,26 +4666,24 @@ msgstr "ajouter une région ..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:899
 msgid "Add Committee Member..."
-msgstr "ajouter un membre de comité ..."
+msgstr "ajouter un membre de la commission ..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:906
 msgid "Add Committee Staff..."
-msgstr "ajouter un employé de comité ..."
+msgstr "ajouter un employé de la commission ..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:920
 msgid "Add Office Member..."
-msgstr "ajouter un employé de département ..."
+msgstr "ajouter un employé du bureau..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:929
-#, fuzzy
 msgid "Add Group Address..."
-msgstr "ajouter une adresse ..."
+msgstr "ajouter une adresse du groupe ..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:946
 #: src/bungeni.main/bungeni/ui/menu.zcml:953
-#, fuzzy
 msgid "Add User Address..."
-msgstr "ajouter une adresse ..."
+msgstr "ajouter l'adresse d'utilisateur"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:960
 msgid "Add Delegation..."
@@ -4712,9 +4702,8 @@ msgid "Document Type"
 msgstr "type de document"
 
 #: src/bungeni.main/bungeni/ui/reports.py:127
-#, fuzzy
 msgid "Type of report to be produced"
-msgstr "type de document à produire"
+msgstr "type de rapport à produire"
 
 #: src/bungeni.main/bungeni/ui/reports.py:135
 #: src/bungeni.main/bungeni/ui/reports.py:327
@@ -4722,17 +4711,16 @@ msgid "Choose a starting date for this report"
 msgstr "Choisissez la date à laquelle commence ce rapport"
 
 #: src/bungeni.main/bungeni/ui/reports.py:221
-#, fuzzy
 msgid "The sitting has no scheduled items"
 msgstr "pas de point d'ordre du jour prévu"
 
 #: src/bungeni.main/bungeni/ui/reports.py:230
 msgid "You are trying to generate a report outside scheduling"
-msgstr ""
+msgstr "tenter de généré un document en dehors d'horaire"
 
 #: src/bungeni.main/bungeni/ui/reports.py:237
 msgid "The period selected has no sittings"
-msgstr ""
+msgstr "aucune séance est programme pour la période choisi"
 
 #: src/bungeni.main/bungeni/ui/reports.py:244
 msgid "A parliament must be active in the period"
@@ -4743,59 +4731,52 @@ msgid "Preview"
 msgstr "aperçu"
 
 #: src/bungeni.main/bungeni/ui/reports.py:331
-#, fuzzy
 msgid "Choose an end date for this report"
 msgstr "Choisissez la date à laquelle commence ce rapport"
 
 #: src/bungeni.main/bungeni/ui/reports.py:346
 #: src/bungeni.main/bungeni/ui/reports.py:347
-#, fuzzy
 msgid "Sittings included in this report"
-msgstr "Choisissez la date à laquelle commence ce rapport"
+msgstr "les séance inscrire dans ce rapport"
 
 #: src/bungeni.main/bungeni/ui/reports.py:454
 msgid "No user is defined. Are you logged in as Admin?"
 msgstr ""
+"aucun utilisateur est défini,est-ce que tu es connecte comme administrateur?"
 
 #: src/bungeni.main/bungeni/ui/reports.py:67
-#, fuzzy
 msgid "Agenda Items"
-msgstr "points"
+msgstr "points inscrire a l'ordre du jour"
 
 #: src/bungeni.main/bungeni/ui/reports.py:70
-#, fuzzy
 msgid "Tabled Documents"
 msgstr "documents déposés"
 
 #: src/bungeni.main/bungeni/ui/rss.py:347
 #: src/bungeni.main/bungeni/ui/search.py:332
-#, fuzzy
 msgid "changes from"
-msgstr "modification"
+msgstr "modification a partir de"
 
 #: src/bungeni.main/bungeni/ui/rss.py:436
 #: src/bungeni.main/bungeni/ui/rss.py:452
-#, fuzzy
 msgid "timeline"
-msgstr "chronologie du projet de loi"
+msgstr "chronologie"
 
 #: src/bungeni.main/bungeni/ui/search.py:123
 msgid "Query"
 msgstr "requête"
 
 #: src/bungeni.main/bungeni/ui/search.py:131
-#, fuzzy
 msgid "Content type"
-msgstr "comité"
+msgstr "type de commission"
 
 #: src/bungeni.main/bungeni/ui/search.py:152
 msgid "Highlight words"
-msgstr ""
+msgstr "souligner les mots"
 
 #: src/bungeni.main/bungeni/ui/search.py:159
-#, fuzzy
 msgid "Annotation"
-msgstr "administration"
+msgstr "annotation"
 
 #: src/bungeni.main/bungeni/ui/search.py:242
 msgid "rank"
@@ -4816,7 +4797,7 @@ msgstr "poids"
 
 #: src/bungeni.main/bungeni/ui/search.py:252
 msgid "percent"
-msgstr "pour cent"
+msgstr "pourcentage"
 
 #: src/bungeni.main/bungeni/ui/search.py:496
 #: src/bungeni.main/bungeni/ui/search.py:612
@@ -4831,9 +4812,8 @@ msgid "Invalid Query"
 msgstr "requête invalide"
 
 #: src/bungeni.main/bungeni/ui/search.py:607
-#, fuzzy
 msgid "Field"
-msgstr "fichier"
+msgstr "domaine"
 
 #. Default: "Upload file"
 #: src/bungeni.main/bungeni/ui/templates/addfilewidget.pt:2
@@ -4848,7 +4828,7 @@ msgstr "résultats"
 
 #: src/bungeni.main/bungeni/ui/templates/advanced-pagedsearch.pt:7
 msgid "Advanced Search"
-msgstr ""
+msgstr "une cherche avance"
 
 #: src/bungeni.main/bungeni/ui/templates/app-index.pt:7
 msgid "Welcome to Bungeni"
@@ -4861,19 +4841,17 @@ msgstr "accès aux dossiers courants et historiques"
 #. Default: "No attachments found."
 #: src/bungeni.main/bungeni/ui/templates/attachments.pt:15
 msgid "no_attachments"
-msgstr ""
+msgstr "pas des documents joint"
 
 #: src/bungeni.main/bungeni/ui/templates/attendance.pt:11
 msgid "Update member attendance for the sitting"
-msgstr ""
+msgstr "actualiser les fiche de présence des membres pour la séance"
 
 #: src/bungeni.main/bungeni/ui/templates/attendance.pt:6
-#, fuzzy
 msgid "Sitting attendance record"
-msgstr "présence lors de la séance "
+msgstr "fiche de présence "
 
 #: src/bungeni.main/bungeni/ui/templates/bungenicontent.pt:16
-#, fuzzy
 msgid "Registry Number"
 msgstr "numéro de registre"
 
@@ -4891,7 +4869,7 @@ msgstr "numéro de registre"
 #: src/bungeni.main/bungeni/ui/viewlets/templates/questions.pt:14
 #: src/bungeni.main/bungeni/ui/viewlets/templates/bungeni-navigation-tree.pt:33
 msgid "${DYNAMIC_CONTENT}"
-msgstr "${dynamiccontent}"
+msgstr "${un contenu dynamique}"
 
 #. Default: "Keep existing file"
 #: src/bungeni.main/bungeni/ui/templates/editfilewidget.pt:21
@@ -4943,19 +4921,19 @@ msgstr ""
 #: src/bungeni.main/bungeni/ui/templates/vocabularies.pt:6
 #: src/bungeni.main/bungeni/ui/templates/vocabularies.pt:9
 msgid "Vocabularies Manager"
-msgstr ""
+msgstr "gestionnaire des vocabulaires"
 
 #: src/bungeni.main/bungeni/ui/templates/workflow.pt:11
 msgid "Current state: ${state}."
-msgstr "état actuel: ${state}"
+msgstr "état actuel: ${état}"
 
 #: src/bungeni.main/bungeni/ui/templates/workflow.pt:15
 msgid "History"
-msgstr "historique"
+msgstr "histoire"
 
 #: src/bungeni.main/bungeni/ui/templates/workflow.pt:19
 msgid "No history available for this item"
-msgstr "aucun historique disponible pour cet article"
+msgstr "aucun histoire disponible pour cet article"
 
 #: src/bungeni.main/bungeni/ui/templates/workflow_ajax.pt:7
 msgid "Change state..."
@@ -4963,16 +4941,15 @@ msgstr "changement d'état ..."
 
 #: src/bungeni.main/bungeni/ui/templates/xapian-settings.pt:6
 msgid "Rebuild search index"
-msgstr ""
+msgstr "reconstruire les paramétrés de recherche"
 
 #: src/bungeni.main/bungeni/ui/utils/date.py:26
 msgid "invalid date. choose or type correct date"
-msgstr ""
+msgstr " une date invalide,choisir et saisir une bon date"
 
 #: src/bungeni.main/bungeni/ui/utils/misc.py:67
 msgid "Form values must be of type string or list"
-msgstr ""
-"les valeurs du formulaire doivent être du type chaîne de caractères ou liste"
+msgstr "les valeurs du formulaire doivent être du type ou de liste "
 
 #: src/bungeni.main/bungeni/ui/versions.py:100
 msgid "message"
@@ -4984,7 +4961,7 @@ msgstr "nouvelle version"
 
 #: src/bungeni.main/bungeni/ui/versions.py:158
 msgid "New Version Created"
-msgstr "nouvelle version créée"
+msgstr "nouvelle version créé"
 
 #: src/bungeni.main/bungeni/ui/versions.py:160
 msgid "Revert To"
@@ -5044,7 +5021,7 @@ msgstr "effacer"
 
 #: src/bungeni.main/bungeni/ui/viewlets/archive.py:126
 msgid "Date range cleared"
-msgstr "intervalle de dates effacé"
+msgstr "intervalle de date effacé"
 
 #: src/bungeni.main/bungeni/ui/viewlets/archive.py:22
 msgid "From"
@@ -5068,13 +5045,11 @@ msgstr "ou sélectionnez"
 
 #: src/bungeni.main/bungeni/ui/viewlets/archive.py:33
 msgid "Set date range to that of a given particular parliament"
-msgstr ""
-"fixer un intervalle de dates correspondant à celui d'un parlement donné en "
-"particulier"
+msgstr "fixer un intervalle de date correspondant à celui d'un parlement donné "
 
 #: src/bungeni.main/bungeni/ui/viewlets/archive.py:41
 msgid "Filter the archive by date range"
-msgstr "filtrer les archives par intervalle de dates"
+msgstr "filtrer les archives par intervalle de date"
 
 #: src/bungeni.main/bungeni/ui/viewlets/archive.py:80
 msgid "parliament..."
@@ -5086,7 +5061,7 @@ msgstr "filtrer"
 
 #: src/bungeni.main/bungeni/ui/viewlets/archive.py:98
 msgid "Invalid Date Range"
-msgstr "intervalle de dates invalide"
+msgstr "intervalle de date invalide"
 
 #: src/bungeni.main/bungeni/ui/viewlets/templates/archive-dates.pt:12
 msgid "Filter by date or parliament"
@@ -5100,14 +5075,13 @@ msgstr "vous êtes ici:"
 #. Default: "Home"
 #: src/bungeni.main/bungeni/ui/viewlets/templates/breadcrumbs.pt:7
 msgid "tabs_home"
-msgstr "acceuil"
+msgstr "accueil"
 
 #: src/bungeni.main/bungeni/ui/viewlets/templates/questions.pt:24
 msgid "No items"
-msgstr "pas d'articles"
+msgstr "pas des articles"
 
 #: src/bungeni.main/bungeni/ui/viewlets/templates/scheduling.pt:13
-#, fuzzy
 msgid "Add items to schedule by clicking on the checkbox"
 msgstr "ajouter les articles en cliquant sur eux"
 
@@ -5118,7 +5092,7 @@ msgstr "sections"
 
 #: src/bungeni.main/bungeni/ui/viewlets/templates/whatson.pt:121
 msgid "Period selected has no Questions"
-msgstr ""
+msgstr "aucun question pour la période choisi"
 
 #: src/bungeni.main/bungeni/ui/viewlets/templates/whatson.pt:13
 msgid "An overview of the daily operations of the parliament"
@@ -5126,27 +5100,27 @@ msgstr "un aperçu des activités quotidiennes du parlement"
 
 #: src/bungeni.main/bungeni/ui/viewlets/templates/whatson.pt:147
 msgid "Period selected has no Tabled Documents"
-msgstr ""
+msgstr "aucun document est dépose pour la période choisi"
 
 #: src/bungeni.main/bungeni/ui/viewlets/templates/whatson.pt:173
 msgid "Period selected has no Agenda Items"
-msgstr ""
+msgstr "aucun point est inscrire a l'ordre du jour pendant cet période choisi"
 
 #: src/bungeni.main/bungeni/ui/viewlets/templates/whatson.pt:20
 msgid "From: ${whats_on_start_date} to: ${whats_on_end_date}"
-msgstr "du: ${whats_on_start_date} jusqu'au: ${whats_on_end_date}"
+msgstr "du: ${quoi_on_début_date} jusqu'au: ${quoi_on_fin date}"
 
 #: src/bungeni.main/bungeni/ui/viewlets/templates/whatson.pt:25
 msgid "Period selected has no Sittings"
-msgstr ""
+msgstr "aucun séance est programme pendant la période choisi"
 
 #: src/bungeni.main/bungeni/ui/viewlets/templates/whatson.pt:67
 msgid "Period selected has no Bills"
-msgstr ""
+msgstr "aucun projet de loi est programme pendant la période choisi"
 
 #: src/bungeni.main/bungeni/ui/viewlets/templates/whatson.pt:94
 msgid "Period selected has no Motions"
-msgstr ""
+msgstr "aucune motion est programme pendant la période choisi"
 
 #: src/bungeni.main/bungeni/ui/views.zcml:491
 msgid "Listing"
@@ -5158,7 +5132,7 @@ msgstr "mâle"
 
 #: src/bungeni.main/bungeni/ui/vocabulary.py:118
 msgid "Female"
-msgstr "femelle"
+msgstr "feminin"
 
 #: src/bungeni.main/bungeni/ui/vocabulary.py:131
 msgid "initial"
@@ -5166,7 +5140,7 @@ msgstr "initial"
 
 #: src/bungeni.main/bungeni/ui/vocabulary.py:132
 msgid "subsequent"
-msgstr "subséquent"
+msgstr "éventuel"
 
 #: src/bungeni.main/bungeni/ui/vocabulary.py:135
 msgid "Yes"
@@ -5184,22 +5158,20 @@ msgstr "jour_%d"
 #. Default: ""
 #: src/bungeni.main/bungeni/ui/vocabulary.py:95
 msgid "Day $number of every month"
-msgstr "jour $number de chaque mois"
+msgstr "jour $numéro de chaque mois"
 
 #. Default: ""
 #: src/bungeni.main/bungeni/ui/vocabulary.py:99
 msgid "First $day of every month"
-msgstr "premier $day de chaque mois"
+msgstr "premier $jour de chaque mois"
 
 #: src/bungeni.main/bungeni/ui/widgets.py:1189
-#, fuzzy
 msgid "selected subject terms"
 msgstr "sujet"
 
 #: src/bungeni.main/bungeni/ui/widgets.py:1204
-#, fuzzy
 msgid "no subjects"
-msgstr "sujet"
+msgstr "sans sujet"
 
 #: src/bungeni.main/bungeni/ui/widgets.py:151
 #: src/bungeni.main/bungeni/ui/widgets.py:157
@@ -5226,51 +5198,48 @@ msgstr "entrer une année valide s'il vous plaît "
 #: src/bungeni.main/bungeni/ui/widgets.py:547
 #: src/bungeni.main/bungeni/ui/widgets.py:611
 msgid "Incorrect string data for date"
-msgstr "chaîne de caractères incorrecte pour la date"
+msgstr "base de donne incorrecte pour la date"
 
 #: src/bungeni.main/bungeni/ui/widgets.py:703
 #: src/bungeni.main/bungeni/ui/widgets.py:780
 msgid "Incorrect string data for date and time"
-msgstr "chaîne de caractères incorrecte pour la date et l'heure"
+msgstr "base de donne incorrecte pour la date et l'heure"
 
 #. Default: ""
 #: src/bungeni.main/bungeni/ui/widgets.py:90
 msgid "Invalid date: $value"
-msgstr "date invalide: $value"
+msgstr "date invalide: $valeur"
 
 #: src/bungeni.main/bungeni/ui/workflow.py:134
 msgid "Comment on workflow change"
 msgstr "commentaires sur les modifications du flux de travail"
 
 #: src/bungeni.main/bungeni/ui/workflow.py:136
-#, fuzzy
 msgid "Active Date"
 msgstr "date de notification"
 
 #: src/bungeni.main/bungeni/ui/workflow.py:193
 msgid "Active Date is in the past."
-msgstr ""
+msgstr "date actif dans le passe"
 
 #: src/bungeni.main/bungeni/ui/workflow.py:196
 msgid "Active Date is in the future."
-msgstr ""
+msgstr "date actif dans le futur"
 
 #. Default: ""
 #: src/bungeni.main/bungeni/ui/workflow.py:217
 msgid "Confirmation required for workflow transition: '${title}'"
-msgstr "confirmation requise pour la transition du flux de travail: '${title}'"
+msgstr "confirmation requise pour la transition du flux de travail: '${titre}'"
 
 #: src/bungeni.main/bungeni/ui/workflow.py:59
 msgid "Workflow history"
-msgstr "historique du flux de travail"
+msgstr "histoire du flux de travail"
 
 #: src/bungeni.main/bungeni/ui/workspace.py:37
-#, fuzzy
 msgid "item type"
-msgstr "type de projet de loi "
+msgstr "type d'article "
 
 #: src/bungeni.main/bungeni/ui/workspace.py:39
-#, fuzzy
 msgid "status date"
 msgstr "date de statut"
 
