Commit from Bungeni: Pootle Localisation Portal by user flavio.: 1051 of 1051 messages translated (0 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
@@ -3,13 +3,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Wed Jul 13 12:37:52 2011\n"
-"PO-Revision-Date: 2011-07-12 13:22+0300\n"
-"Last-Translator: Murithi <bungeni.translator@gmail.com>\n"
+"PO-Revision-Date: 2011-07-26 22:03+0300\n"
+"Last-Translator: Flavio <flavio.zeni@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: en\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.0.4\n"
 "Language-Code: en\n"
@@ -18,9 +18,8 @@ msgstr ""
 "Language-Name: English\n"
 
 #: src/bungeni.main/bungeni/core/app.py:102
-#, fuzzy
 msgid "Bungeni"
-msgstr "bungeni visitor"
+msgstr "bungeni"
 
 #: src/bungeni.main/bungeni/core/app.py:103
 #: src/bungeni.main/bungeni/core/app.py:110
@@ -2570,7 +2569,7 @@ msgstr "committee type"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1235
 msgid "Committee types"
-msgstr "committees types"
+msgstr "committee types"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1240
 msgid "Committee Type"
@@ -3307,7 +3306,6 @@ msgid "Country Code"
 msgstr "country code"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:3171
-#, fuzzy
 msgid "Two letter ISO Code for this country e.g. DZ for Algeria"
 msgstr "two letter ISO code for this country e.g. DZ for Algeria"
 
@@ -4740,7 +4738,7 @@ msgstr "changes from"
 #: src/bungeni.main/bungeni/ui/rss.py:436
 #: src/bungeni.main/bungeni/ui/rss.py:452
 msgid "timeline"
-msgstr "chronology"
+msgstr "timeline"
 
 #: src/bungeni.main/bungeni/ui/search.py:123
 msgid "Query"
