Commit from Bungeni: Pootle Localisation Portal by user murithi.: 1051 of 1051 messages translated (0 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni/fr/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/fr/LC_MESSAGES/bungeni.po
@@ -3,8 +3,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Wed Jul 13 12:37:52 2011\n"
-"PO-Revision-Date: 2011-07-20 21:00+0300\n"
-"Last-Translator: Amin <amin@assemblenationale.cm>\n"
+"PO-Revision-Date: 2011-08-01 16:57+0300\n"
+"Last-Translator: Murithi <bungeni.translator@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
@@ -3828,7 +3828,7 @@ msgstr ""
 #. Default: ""
 #: src/bungeni.main/bungeni/ui/forms/fields.py:114
 msgid "This content is not yet translated into $language"
-msgstr "le document n'a pas encore été traduit en $langue"
+msgstr "le document n'a pas encore été traduit en Français"
 
 #: src/bungeni.main/bungeni/ui/forms/fields.py:66
 msgid "General"
